--- a/index.html
+++ b/index.html
@@ -1,25 +1,32 @@
-<html>
-<head>
-
+<html lang="en">
+<header>
+    <img src="images/Logo.png" alt="Webstudio Logo">
     
-</head>
+    <nav>
+        <ul>
+            <li>
+                <a href="">Studio</a>
+            </li>
+            <li>
+                <a href="">Portfolio</a>
+            </li>
+            <li>
+                <a href="">Contacts</a>
+            </li>
+        </ul>
+    </nav>
+    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+
+
+
+</header>
 
 <main>
 
-
+test
 
 
 </main>
 
 <footer>
-
-
-
-
-
-
-
-</footer>
-
-</html>
-
