--- a/index.html
+++ b/index.html
@@ -1,32 +1,82 @@
 <html lang="en">
-<header>
-    <img src="images/Logo.png" alt="Webstudio Logo">
-    
-    <nav>
+  <head>
+    <title>Titlu</title>
+  </head>
+  
+  <body>
+    <header>
+      <a href="">Webstudio</a>
+      <nav>
         <ul>
-            <li>
-                <a href="">Studio</a>
-            </li>
-            <li>
-                <a href="">Portfolio</a>
-            </li>
-            <li>
-                <a href="">Contacts</a>
-            </li>
+          <li>
+            <a href="">Studio</a>
+          </li>
+          <li>
+            <a href="">Portfolio</a>
+          </li>
+          <li>
+            <a href="">Contacts</a>
+          </li>
         </ul>
-    </nav>
-    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+      </nav>
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+    </header>
 
+    <main>
+    <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+        <ul>
+            <h3>Strategy</h3>
+            <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+            <h3>Punctuality</h3>
+            <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+            <h3>Diligence</h3>
+            <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+            <h3>Technologies</h3>
+            <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+        </ul>
+    </section>
+    
+    <section>
+        <h2>What are we doing</h2>
+        <ul>
+            <a href="">
+                <img src="/images/img 1.jpg" alt="Apple Computer" width="360" height="300">
+            </a>
+            <a href="">
+                <img src="/images/img 2.jpg" alt="Multiple screens iPhone" width="360" height="300">
+            </a>
+            <a href="">
+                <img src="/images/img 3.jpg" alt="Laptop and iPhone" width="360" height="300">
+            </a>         
+        </ul>
+    </section>
 
+    <section>
+        <h2>Our Team</h2>
+        <ul>
+            <img src="/images/img 4.jpg" alt="man-with-laptop-presenting-something" width="264" height="260">
+            <p>Mark Guerrero</p>
+            <p>Product Designer</p>
+            <img src="/images/img 5.jpg" alt="A man smiling" width="264" height="260">
+            <p>Tom Ford</p>
+            <p>Frontend Developer</p>
+            <img src="/images/Team Card 3.jpg" alt="young-beautiful-woman-pink-warm-sweater-natural-look-smiling-portrait-isolated-long-hair" 
+                width="264" height="260">
+            <p>Camila Garcia</p>
+            <p>Marketing</p>
+            <img src="/images/img 6.jpg" alt="confident-handsome-guy-posing-against-white-wall" width="264" height="260">
+            <p>Daniel Wilson</p>
+            <p>UI Designer</p>
+        </ul>
+    </section>
+    </main>
 
-</header>
-
-<main>
-
-test
-
-
-</main>
-
-<footer>
+    <footer>
+        <a href="">Webstudio</a>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>    
+    </footer>
+  </body>
+</html>
