--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
         <h2>What are we doing</h2>
         <ul>
             <a href="">
-                <img src="images/img 1.jpg" alt="Apple Computer" width="360" height="300">
+                <img src="/images/img 1.jpg" alt="Apple Computer" width="360" height="300">
             </a>
             <a href="">
-                <img src="images/img 2.jpg" alt="Multiple screens iPhone" width="360" height="300">
+                <img src="/images/img 2.jpg" alt="Multiple screens iPhone" width="360" height="300">
             </a>
             <a href="">
-                <img src="images/img 3.jpg" alt="Laptop and iPhone" width="360" height="300">
+                <img src="/images/img 3.jpg" alt="Laptop and iPhone" width="360" height="300">
             </a>         
         </ul>
     </section>
@@ -57,17 +57,17 @@
     <section>
         <h2>Our Team</h2>
         <ul>
-            <img src="images/img 4.jpg" alt="man-with-laptop-presenting-something" width="264" height="260">
+            <img src="/images/img 4.jpg" alt="man-with-laptop-presenting-something" width="264" height="260">
             <p>Mark Guerrero</p>
             <p>Product Designer</p>
-            <img src="images/img 5.jpg" alt="A man smiling" width="264" height="260">
+            <img src="/images/img 5.jpg" alt="A man smiling" width="264" height="260">
             <p>Tom Ford</p>
             <p>Frontend Developer</p>
-            <img src="images/Team Card 3.jpg" alt="young-beautiful-woman-pink-warm-sweater-natural-look-smiling-portrait-isolated-long-hair" 
+            <img src="/images/Team Card 3.jpg" alt="young-beautiful-woman-pink-warm-sweater-natural-look-smiling-portrait-isolated-long-hair" 
                 width="264" height="260">
             <p>Camila Garcia</p>
             <p>Marketing</p>
-            <img src="images/img 6.jpg" alt="confident-handsome-guy-posing-against-white-wall" width="264" height="260">
+            <img src="/images/img 6.jpg" alt="confident-handsome-guy-posing-against-white-wall" width="264" height="260">
             <p>Daniel Wilson</p>
             <p>UI Designer</p>
         </ul>
